# text_utils

./: pyproject.toml
src/text_utils/: formatacao.py
tests/: test_formatacao.py
